--- a/styles/base.scss
+++ b/styles/base.scss
@@ -182,3 +182,25 @@ $border-style: 1px solid #cfcfcf;
 .default-stroke-lighter {
   stroke: lighten($primary-text-color, 15%);
 }
+
+.has-transition {
+  transition: $transition-style;
+}
+
+.long-transition {
+  transition-duration: 0.5s;
+}
+
+.disappearing {
+  @extend .long-transition;
+  opacity: 0;
+}
+
+.appearing {
+  @extend .long-transition;
+  opacity: 1;
+}
+
+.invisible {
+  opacity: 0;
+}
