--- a/styles/color.scss
+++ b/styles/color.scss
@@ -10,3 +10,5 @@ $white-text-color-1: rgba(
   0.95
 ); // text color on colour background
 $primary-text-color: rgba(28, 30, 33, 0.95); // major text color
+$disable-background: rgba(9, 30, 66, 0.04);
+$disable-text-color: rgba(165, 173, 186, 0.75);
