--- a/components/PointerLink/style.scss
+++ b/components/PointerLink/style.scss
@@ -4,10 +4,19 @@
   .pointer-link__line {
     @extend .default-stroke-lighter;
     stroke-width: 2px;
+
+    &.follow {
+      stroke: $primary-color;
+      stroke-width: 4px;
+    }
   }
 
   .pointer-link__arrow {
     fill: lighten($primary-text-color, 15%);
+
+    &.follow {
+      fill: $primary-color;
+    }
   }
 
   &.visited {
