--- a/styles/color.scss
+++ b/styles/color.scss
@@ -1,4 +1,11 @@
-$primary-color: rgb(236, 100, 85);
+$primary-color: rgb(0, 82, 204);
+$primary-color-1: lighten($primary-color, 10%);
+$primary-color-2: lighten($primary-color, 20%);
+$primary-color-3: lighten($primary-color, 30%);
+$primary-color-4: lighten($primary-color, 40%);
+$primary-color-5: lighten($primary-color, 50%);
+
+
 $background-light: rgb(255, 255, 255);
 $background-dark-1: rgb(235, 235, 235);
 $background-dark-2: rgb(225, 225, 225);
