--- a/components/CodeBlock/prism.css
+++ b/components/CodeBlock/prism.css
@@ -136,12 +136,13 @@ pre[data-line] {
   padding: inherit 0;
   margin-top: 1em; /* Same as .prism’s padding-top */
 
-  background: hsla(24, 20%, 50%, 0.08);
-  background: linear-gradient(
+  /* background: hsla(24, 20%, 50%, 0.08); */
+  background: rgba(68, 70, 89, 0.8);
+  /* background: linear-gradient(
     to right,
     hsla(24, 20%, 50%, 0.1) 70%,
     hsla(24, 20%, 50%, 0)
-  );
+  ); */
 
   pointer-events: none;
 
