--- a/styles/color.scss
+++ b/styles/color.scss
@@ -8,7 +8,8 @@ $primary-color-5: lighten($primary-color, 50%);
 
 $background-light: rgb(255, 255, 255);
 $background-dark-1: rgb(235, 235, 235);
-$background-dark-2: rgb(225, 225, 225);
+$background-dark-2: darken($background-dark-1, 1%);
+$background-dark-3: darken($background-dark-1, 2%);
 $white-text-color: rgba(255, 255, 255, 0.85); // text color on colour background
 $white-text-color-1: rgba(
   255,
