--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,4 @@
-@import "./base.scss";
+@import './base.scss';
 
 html,
 body {
@@ -9,5 +9,4 @@ body {
 
 .canvas {
   width: 100%;
-  height: 100%;
 }
