--- a/styles/base.scss
+++ b/styles/base.scss
@@ -181,6 +181,10 @@ $border-style: 1px solid #cfcfcf;
   display: inline-block;
 }
 
+.il-fx {
+  display: inline-flex;
+}
+
 .shadow {
   -webkit-box-shadow: 0 0 4px 1px rgba(63, 63, 68, 0.05),
     0 1px 3px 0 rgba(63, 63, 68, 0.15);
