--- a/styles/color.scss
+++ b/styles/color.scss
@@ -21,3 +21,4 @@ $primary-text-color: rgba(28, 30, 33, 0.95); // major text color
 $disable-background: rgba(9, 30, 66, 0.04);
 $disable-background-1: rgba(9, 30, 66, 0.08);
 $disable-text-color: rgba(165, 173, 186, 0.75);
+$border-color: #cfcfcf;
