Added init API for linked list and add autoPlay as props to VisualAlgo

--- a/components/Input/style.scss
+++ b/components/Input/style.scss
@@ -16,4 +16,8 @@
     outline: none;
     box-shadow: 0 0 0 2px inset $primary-color;
   }
+
+  &::placeholder {
+    color: $placeholder-color;
+  }
 }
