--- a/styles/color.scss
+++ b/styles/color.scss
@@ -22,3 +22,4 @@ $disable-background: rgba(9, 30, 66, 0.04);
 $disable-background-1: rgba(9, 30, 66, 0.08);
 $disable-text-color: rgba(165, 173, 186, 0.75);
 $border-color: #cfcfcf;
+$placeholder-color: #bfbfbf;
