Fix some bugs when controll progress

--- a/components/Button/style.scss
+++ b/components/Button/style.scss
@@ -22,4 +22,16 @@
       background-color: darken($primary-color, 8%);
     }
   }
+
+  &.disabled {
+    background-color: $disable-background-1;
+    color: $disable-text-color;
+    &:hover, &:focus, &:active {
+      background-color: $disable-background-1;
+    }
+
+    &:hover {
+      cursor: not-allowed;
+    }
+  }
 }
