Fix duplicate style of sass

--- a/components/Input/style.scss
+++ b/components/Input/style.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base.scss';
+@use '../../styles/_base.scss' as *;
 
 .visual-algo-input__wrapper {
   @extend .has-transition;
