Better handle the final visited state of linked list

--- a/styles/components/PointerLink.scss
+++ b/styles/components/PointerLink.scss
@@ -16,8 +16,10 @@
       fill: $disable-background;
       opacity: 0.3;
 
-      &:not(.follow) {
-        opacity: 0;
+      &.follow {
+        & + .pointer-link__line {
+          opacity: 0;
+        }
       }
     }
     .pointer-link__arrow {
