Complete search for BST

--- a/styles/components/PointerLink.scss
+++ b/styles/components/PointerLink.scss
@@ -27,6 +27,12 @@
     }
   }
 
+  &.following {
+    .pointer-link__line:not(.follow) {
+      opacity: 0.3;
+    }
+  }
+
   .pointer-link__arrow {
     fill: lighten($primary-text-color, 15%);
 
