Added base to render HTML into svg view

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,17 +2,13 @@
 @import './base.scss';
 @import './components/main.scss';
 @import './layout/main.scss';
+@import '~antd/dist/antd.css';
 
 html,
 body {
   @extend .h-full;
   margin: 0;
   padding: 0;
-}
-
-.canvas-container {
-  height: 45vh;
-  width: 100vw;
 }
 
 * {
