Added new UI to init data structure

--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -10,3 +10,4 @@
 @import './StackItem.scss';
 @import './CanvasContainer.scss';
 @import './CustomDropDown.scss';
+@import './InitLinkedListInput.scss';
