--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import './color.scss';
 @import './base.scss';
 @import './components/main.scss';
+@import './pages/main.scss';
 @import './layout/main.scss';
 @import '~antd/dist/antd.css';
 
