Added interaction with DS through dropdown list action

--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -23,3 +23,7 @@ $disable-background-1: rgba(9, 30, 66, 0.08);
 $disable-text-color: rgba(165, 173, 186, 0.75);
 $border-color: #cfcfcf;
 $placeholder-color: #bfbfbf;
+
+$success-color: #52c41a;
+$warning-color: #ffa202;
+$destructive-color: #ff4b2b;
