--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -11,3 +11,5 @@
 @import './CanvasContainer.scss';
 @import './CustomDropDown.scss';
 @import './InitLinkedListInput.scss';
+@import './LinkedListHTML.scss';
+@import './ParemeterInputPopover.scss';
