--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,6 @@
 @import './color.scss';
 @import './base.scss';
+@import './animation.scss';
 @import './components/main.scss';
 @import './pages/main.scss';
 @import './layout/main.scss';
