--- a/styles/components/Input.scss
+++ b/styles/components/Input.scss
@@ -1,21 +1,50 @@
-.visual-algo-input__wrapper {
-  @extend .has-transition;
-  @extend .pl-2;
-  min-height: 38px;
-  border: none;
-  border-radius: $border-radius;
-  box-shadow: 0 0 0 1px inset $border-color;
-
+@mixin box-shadow-color($color) {
   &:hover {
-    box-shadow: 0 0 0 1px inset $primary-color;
+    box-shadow: 0 0 0 1px inset $color;
   }
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 2px inset $primary-color;
+    box-shadow: 0 0 0 2px inset $color;
+  }
+}
+
+.visual-algo-input__wrapper {
+  position: relative;
+
+  .visual-algo-input__input {
+    @extend .has-transition;
+    @extend .pl-2;
+    @include box-shadow-color($primary-color);
+    min-height: 38px;
+    border: none;
+    border-radius: $border-radius;
+    box-shadow: 0 0 0 1px inset $border-color;
+    width: 100%;
+    height: 100%;
+
+    &::placeholder {
+      color: $placeholder-color;
+    }
+
+    &.success {
+      @include box-shadow-color($success-color);
+      box-shadow: 0 0 0 1px inset $success-color;
+    }
   }
 
-  &::placeholder {
-    color: $placeholder-color;
+  .visual-algo-input__status-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+
+    &.success {
+      color: $success-color;
+    }
+
+    &.error {
+      color: $destructive-color;
+    }
   }
 }
