Added new modal to create BST initial data

--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -13,3 +13,5 @@
 @import './InitLinkedListInput.scss';
 @import './LinkedListHTML.scss';
 @import './ParemeterInputPopover.scss';
+@import './CustomModal.scss';
+@import './InitBSTInput.scss';
