Added interactive HTML for binary search tree

--- a/styles/components/BinarySearchTreeHTML.scss
+++ b/styles/components/BinarySearchTreeHTML.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.linked-list-html__node-dropdown {
+.bst-html__node-dropdown {
   position: relative;
   &:hover {
     .dropdown__trigger {
