--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -15,3 +15,4 @@
 @import './ParemeterInputPopover.scss';
 @import './CustomModal.scss';
 @import './InitBSTInput.scss';
+@import './BinarySearchTreeHTML.scss';
