--- a/styles/components/MemoryBlock.scss
+++ b/styles/components/MemoryBlock.scss
@@ -38,4 +38,16 @@
       fill: $primary-color;
     }
   }
+
+  &.focus-to-delete {
+    .memory-block__block,
+    .memory-block__separate-line {
+      fill: lighten($destructive-color, 30%);
+      stroke: $destructive-color;
+    }
+
+    .memory-block__text {
+      fill: $white-text-color;
+    }
+  }
 }
