Add individual node dropdown and whole tree dropdown

--- a/styles/components/BinarySearchTreeHTML.scss
+++ b/styles/components/BinarySearchTreeHTML.scss
@@ -39,3 +39,13 @@
     }
   }
 }
+
+.bst-html__wrapper {
+  position: relative;
+
+  & > .dropdown__trigger {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
