--- a/styles/components/LinkedListHTML.scss
+++ b/styles/components/LinkedListHTML.scss
@@ -39,3 +39,13 @@
     }
   }
 }
+
+.linked-list-html__wrapper {
+  position: relative;
+
+  & > .dropdown__trigger {
+    position: absolute;
+    top: -20px;
+    right: -60px;
+  }
+}
