--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -9,10 +9,9 @@
 @import './QueueItem.scss';
 @import './StackItem.scss';
 @import './Line.scss';
-
 @import './CanvasContainer.scss';
 @import './CustomDropDown.scss';
-@import './InitLinkedListInput.scss';
+@import './InitArrayInput.scss';
 @import './LinkedListHTML.scss';
 @import './ParemeterInputPopover.scss';
 @import './CustomModal.scss';
