--- a/styles/components/ArrayHTML.scss
+++ b/styles/components/ArrayHTML.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.linked-list-html__node-dropdown {
+.bst-html__node-dropdown {
   position: relative;
   &:hover {
     .dropdown__trigger {
@@ -40,7 +40,7 @@
   }
 }
 
-.linked-list-html__wrapper {
+.array-html__wrapper {
   position: relative;
 
   & > .dropdown__trigger {
