--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -17,3 +17,4 @@
 @import './CustomModal.scss';
 @import './InitBSTInput.scss';
 @import './BinarySearchTreeHTML.scss';
+@import './ArrayHTML.scss';
