--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -18,3 +18,4 @@
 @import './InitBSTInput.scss';
 @import './BinarySearchTreeHTML.scss';
 @import './ArrayHTML.scss';
+@import './InitGraphInput.scss';
