Improve init graph modal and add graph api dropdown

--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -19,3 +19,4 @@
 @import './BinarySearchTreeHTML.scss';
 @import './ArrayHTML.scss';
 @import './InitGraphInput.scss';
+@import './GraphHTML.scss';
