--- a/styles/layout/VisualAlgo.scss
+++ b/styles/layout/VisualAlgo.scss
@@ -1,6 +1,6 @@
 .visual-container {
   border: $border-style;
-  background-color: $background-light;
+  // background-color: $background-light;
 
   .api-select {
     height: auto;
