--- a/styles/components/InitGraphInput.scss
+++ b/styles/components/InitGraphInput.scss
@@ -17,7 +17,7 @@
       stroke: $success-color;
       @extend .stroke-2;
       fill: none;
-      stroke-dasharray: 8px;
+      stroke-dasharray: $default-dasharray;
     }
 
     text {
@@ -38,7 +38,7 @@
 
     & > path:last-child {
       stroke: $success-color;
-      stroke-dasharray: 8px;
+      stroke-dasharray: $default-dasharray;
     }
 
     &.show {
