Added highlight edges for graph and completed graph DFS and BFS

--- a/styles/components/MemoryBlock.scss
+++ b/styles/components/MemoryBlock.scss
@@ -39,7 +39,7 @@
 
       &.value-text {
         font-weight: 600;
-        fill: $white-text-color;
+        fill: $white-text-color-1;
       }
     }
   }
@@ -52,7 +52,7 @@
     }
 
     .memory-block__text {
-      fill: $white-text-color;
+      fill: $white-text-color-1;
     }
   }
 
