--- a/styles/components/PointerLink.scss
+++ b/styles/components/PointerLink.scss
@@ -4,10 +4,15 @@
     stroke-width: 2px;
     fill: none;
 
-    &.follow {
+    &.follow,
+    &.highlight {
       stroke: $primary-color;
       fill: $primary-color !important;
       stroke-width: 3px;
+    }
+
+    &.highlight + .pointer-link__line {
+      opacity: 0;
     }
   }
 
