Added background color for label text

--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -7,6 +7,7 @@ $primary-color-4: lighten($primary-color, 40%);
 $primary-color-5: lighten($primary-color, 50%);
 
 $background-light: rgb(255, 255, 255);
+$background-light-1: #f6f7f9;
 $background-dark-1: rgb(235, 235, 235);
 $background-dark-2: darken($background-dark-1, 1%);
 $background-dark-3: darken($background-dark-1, 2%);
