--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -287,3 +287,15 @@ $default-dasharray: 8px;
 .fill-background {
   fill: $background-light-1;
 }
+
+.deemphasized {
+  opacity: 0.15;
+}
+
+.deemphasized-1 {
+  opacity: 0.35;
+}
+
+.deemphasized-2 {
+  opacity: 0.55;
+}
