Added linear probing for has table insert

--- a/styles/components/HashTable.scss
+++ b/styles/components/HashTable.scss
@@ -8,8 +8,8 @@
 
 .hash-table__memory-blocks {
   .hash-table__memory-block {
-    &.blur * {
-      @extend .deemphasized-1;
+    &.blur > * {
+      @extend .deemphasized;
     }
   }
 }
