Complete insertion sort

--- a/styles/components/Line.scss
+++ b/styles/components/Line.scss
@@ -1,5 +1,5 @@
 .line--wrapper {
-  stroke: $primary-color-2;
+  stroke: $primary-color;
   stroke-width: 2;
   stroke-dasharray: $default-dasharray;
 }
