--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -23,3 +23,4 @@
 @import './HighlightCircle.scss';
 @import './HashTable.scss';
 @import './HashTableHTML.scss';
+@import './ArrayMemoryBlock.scss';
