Added zoom feature

--- a/styles/components/CanvasContainer.scss
+++ b/styles/components/CanvasContainer.scss
@@ -10,4 +10,10 @@
     left: 0;
     right: 0;
   }
+
+  .zoom-controller__wrapper {
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+  }
 }
