--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -24,3 +24,4 @@
 @import './HashTable.scss';
 @import './HashTableHTML.scss';
 @import './ArrayMemoryBlock.scss';
+@import './PanZoomController.scss';
