Added smooth animation for zoom and collapsing sidebar

--- a/styles/components/PanZoomController.scss
+++ b/styles/components/PanZoomController.scss
@@ -1,8 +1,13 @@
 .zoom-controller__wrapper {
   & > div {
+    @extend .has-transition;
     width: 45px;
     height: 45px;
     border-radius: 50%;
     user-select: none;
+
+    &:hover {
+      background-color: $background-dark-1;
+    }
   }
 }
