--- a/styles/components/CustomDropDown.scss
+++ b/styles/components/CustomDropDown.scss
@@ -5,6 +5,11 @@
   padding: 2px 8px;
   line-height: 0;
   border-radius: 4px;
+
+  &.disabled {
+    opacity: 0.45;
+    cursor: not-allowed;
+  }
 }
 
 .dropdown__overlay {
