--- a/styles/components/ProgressControl.scss
+++ b/styles/components/ProgressControl.scss
@@ -9,7 +9,9 @@
   .progress-control__button-wrapper {
     @extend .il-fx;
     @extend .shadow;
-    padding: 5px 10px;
+    @extend .fx-center;
+    @extend .px-6;
+    @extend .py-2;
     border: $border-style;
     border-radius: $border-radius;
     position: relative;
@@ -21,17 +23,40 @@
       height: 34px;
       border-radius: 50%;
       z-index: 10;
+      border: none;
+      background-color: transparent;
 
       &:hover:not(.disabled) {
-        @extend .shadow;
-        background-color: $primary-color-2;
+        background-color: $hover-color;
         cursor: pointer;
+      }
+
+      &:focus {
+        background-origin: none;
+        outline: none;
       }
 
       &.disabled {
         cursor: not-allowed;
-        & > svg > path {
-          fill: rgba(0, 0, 0, 0.2);
+        opacity: 0.45;
+      }
+
+      &.play-button {
+        @extend .fx-center;
+        @extend .mx-1;
+        display: inline-flex;
+        width: 50px;
+        height: 50px;
+        background-color: $primary-color;
+        border-radius: 50%;
+        color: $white-text-color-1;
+
+        &:hover:not(.disabled) {
+          background-color: $primary-color-1;
+
+          &:active {
+            background-color: darken($primary-color, 8%);
+          }
         }
       }
     }
