Simple layout for home page

--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -25,3 +25,4 @@
 @import './HashTableHTML.scss';
 @import './ArrayMemoryBlock.scss';
 @import './PanZoomController.scss';
+@import './TopicCard.scss';
