Added continue api for the rest DS

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,11 @@
 @font-face {
   font-family: 'IBMPlexSans';
+  src: url('/IBMPlexSans-Regular.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'IBMPlexSans';
   src: url('/IBMPlexSans-Medium.ttf') format('truetype');
   font-weight: 500;
 }
