Add home page title animation

--- a/styles/components/main.scss
+++ b/styles/components/main.scss
@@ -26,3 +26,4 @@
 @import './ArrayMemoryBlock.scss';
 @import './PanZoomController.scss';
 @import './TopicCard.scss';
+@import './HomePageTitle.scss';
