Added tooltip for hash function

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -303,3 +303,11 @@ $default-dasharray: 8px;
 .deemphasized-2 {
   opacity: 0.55;
 }
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
